--- a/basket.html
+++ b/basket.html
@@ -8,37 +8,42 @@
 </head>
 <body>
     <div id="itemsInCart"></div>
-    <div id="offer">
-        <p>Get the offer</p>
-        <ul>
-            <li> Flat 200 Off on shopping worth 1999 & above, code- MAX200
-            </li>
-            <li> Flat 100 Off on 999 & above orders, code- NEW100 (First purchase only)</li>
-        </ul>
-    </div>
+    <div class="line"></div>
+
     <div id="container">
-       <main> <table>
-            <thead>
-                <tr>
-                   <pre> <th>Item</th></pre>
-                    <th>Description</th>
-                    <th>Price</th>
-                    <th>Quantity</th>
-                    <th>Total Price</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><img src="https://i1.lmsin.net/website_images/in/logos/logo-max.svg" alt="max"></td>
-                </tr>
-            </tbody>
-        </table></main>
-        <div id="checkout">
-            <div><p>Subtotal : </p><p2></p2></div>
-            <div><p>Standard Ground Shipping : </p>  <p3>FREE</p3></div>
-            <div><p>TOTAL :</p><p4></p4></div>
-            <div id="button">Proceed To Checkout</div>
+        <div class="left">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Item</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                        <th>Remove from cart</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- append your data -->
+                </tbody>
+            </table>
         </div>
+        <div class="right">
+            <div id="right-top">
+                <div class="price-show">
+                    <span>Subtotal</span><span class="subtotal"></span>
+                    <p>Standard Ground Shipping:</p>
+                    <div class="line"></div>
+                </div>
+                <div class="total">
+                    <span>Total</span>
+                    <span></span>
+                </div>
+                <button>Proceed to Checkout</button>
+            </div>
+            <div id="right-bottom">
+               <input type="text" name="" id="promo" placeholder="Enter promo code">
+            </div>
+        </div>
+    
     </div>
     <div id="paymentWays">
         <p>Ways to pay</p>
