basket conntected to checkout

--- a/basket.html
+++ b/basket.html
@@ -30,14 +30,14 @@
             <div id="right-top">
                 <div class="price-show">
                     <span>Subtotal</span><span class="subtotal"></span>
-                    <p>Standard Ground Shipping:</p>
+                    <p>Standard Ground Shipping: <span class="free">Free</span></p>
                     <div class="line"></div>
                 </div>
                 <div class="total">
                     <span>Total</span>
-                    <span></span>
+                    <span class="sub-total"></span>
                 </div>
-                <button>Proceed to Checkout</button>
+                <button class="checkout">Proceed to Checkout</button>
             </div>
             <div id="right-bottom">
                <input type="text" name="" id="promo" placeholder="Enter promo code">
