changed size of input

--- a/otp.html
+++ b/otp.html
@@ -82,10 +82,10 @@
             <h2>Verify with OTP</h2>
             <p class="change"></p>
             <div class="input-group flex-nowrap">
-                <input type="text" class="form-control">
-                <input type="text" class="form-control">
-                <input type="text" class="form-control">
-                <input type="text" class="form-control">
+                <input type="text" class="form-control" size="10">
+                <input type="text" class="form-control" size="10">
+                <input type="text" class="form-control" size="10">
+                <input type="text" class="form-control" size="10">
               </div>
             <p>We have sent you code. </p>
             <button>CONTINUE</button>     
