bug removed from signup page

--- a/signup-start.html
+++ b/signup-start.html
@@ -113,7 +113,7 @@
 </body>
 </html>
 <script>
-    document.querySelectorAll("#model-container i").addEventListener("click",myfunc)
+    document.querySelector("#model-container i").addEventListener("click",myfunc)
 
     function myfunc(){
         window.location.href="moving-img-women.html"
