--- a/signup-successful.html
+++ b/signup-successful.html
@@ -111,10 +111,9 @@
 </html>
 <script>
         var getNo=JSON.parse(localStorage.getItem("enterdNo"))
-        document.querySelector(".change").innerText=`sent to +91${getNo} Change? `
         document.querySelector("button").addEventListener("click",btnFun)
 
         function btnFun(){
-            window.location.href=""
+            window.location.href="./All Home Pages/index.html"
         }
 </script>
