--- a/Sorting Navigation/men_nav_sort.html
+++ b/Sorting Navigation/men_nav_sort.html
@@ -96,7 +96,7 @@
             <img 
             class="img"
             src="https://70415bb9924dca896de0-34a37044c62e41b40b39fcedad8af927.lmsin.net/MAX-Friday/MAX2.O/MAX_SubCatImg/1maxmen-tops-tshirts.jpg"/>
-            <P style="font-size:15px;;">Tops</P>
+           <P style="font-size:15px;;">Tops</P>
             
         </div>
         <div style="width:150px ;">
@@ -202,3 +202,10 @@
     </div>
 </body>
 </html>
+<script>
+    document.querySelector(".img").addEventListener("click",clickfn)
+
+    function clickfn(){
+        window.location.href="../Mens Section/mensTshirt.html"
+    }
+</script>
