--- a/Sorting Navigation/women_nav_sort.html
+++ b/Sorting Navigation/women_nav_sort.html
@@ -240,6 +240,6 @@
     document.querySelector(".img").addEventListener("click",clickfn)
 
     function clickfn(){
-        window.location.href="../Womens Section/tees.html"
+        window.location.href="../Womens Section/ethinic.html"
     }
 </script>
