functional navbar added

--- a/signup-start.html
+++ b/signup-start.html
@@ -116,7 +116,7 @@
     document.querySelector("#model-container i").addEventListener("click",myfunc)
 
     function myfunc(){
-        window.location.href="moving-img-women.html"
+        window.location.href="./All Home Pages/index.html"
     }
     
     
