added rohits work in all page

--- a/All Home Pages/Girls.html
+++ b/All Home Pages/Girls.html
@@ -99,18 +99,18 @@
                     </li>
             
             
-                    <li><a href="#">Girls</a>
+                    <li><a href="#" style="color:#303ab2;font-weight: 600;">Girls</a>
                         <div class="Sub_menu_3" style="display:block; position:absolute; margin-top: 10px; margin-left: -17.3%;">
                             <ul>
                                 <li><a href="#">Baby Girl (0-2 Yrs)</a></li>
-                                <li><a href="#">Tops</a></li>
-                                <li><a href="#">Bottoms</a></li>
-                                <li><a href="#">Essentials</a></li>
-                                <li><a href="#">Indian Wear</a></li>
-                                <li><a href="#">Accessories</a></li>
+                                <li><a href="../Girls Section/girls_tees.html">Tops</a></li>
+                                <li><a href="../Girls Section/girls_jeans.html">Bottoms</a></li>
+                                <li><a href="../Girls Section/girls_essentials.html">Essentials</a></li>
+                                <li><a href="../Girls Section/girls_indian.html">Indian Wear</a></li>
+                                <li><a href="../Girls Section/girls_essentials.html">Accessories</a></li>
                                 <li><a href="#">Footwear</a></li>
                                 <li><a href="#">Winterwear</a></li>
-                                <li><a href="#">More</a></li>
+                                <li><a href="../Girls Section/girls_addon.html">More</a></li>
                             </ul>
                         </div>
                     </li>
