--- a/All Home Pages/boys.html
+++ b/All Home Pages/boys.html
@@ -123,18 +123,18 @@
                     </li>
             
             
-                    <li><a href="#">Boys</a>
+                    <li><a href="#" style="color:#303ab2;font-weight: 600;">Boys</a>
                         <div class="Sub_menu_4" style="display:block; position: absolute; margin-top: 10px; margin-left: -21.3%;">
                             <ul>
                                 <li><a href="#">Baby Boy (0-2 Yrs)</a></li>
-                                <li><a href="#">Tops</a></li>
-                                <li><a href="#">Bottoms</a></li>
-                                <li><a href="#">Essentials</a></li>
-                                <li><a href="#">Indian Wear</a></li>
-                                <li><a href="#">Accessories</a></li>
+                                <li><a href="../Boys Section/boys_Tees.html">Tops</a></li>
+                                <li><a href="../Boys Section/boys_bottoms.html">Bottoms</a></li>
+                                <li><a href="../Boys Section/boys_essentials.html">Essentials</a></li>
+                                <li><a href="../Boys Section/boys_indian.html">Indian Wear</a></li>
+                                <li><a href="../Boys Section/boys_shirts.html">Accessories</a></li>
                                 <li><a href="#">Footwear</a></li>
                                 <li><a href="#">Winterwear</a></li>
-                                <li><a href="#">More</a></li>
+                                <li><a href="../Boys Section/boys_addon.html">More</a></li>
                             </ul>
                         </div>
                     </li>
