--- a/All Home Pages/mens.html
+++ b/All Home Pages/mens.html
@@ -79,21 +79,21 @@
                     </li>
             
             
-                    <li><a href="#">Mens</a>
+                    <li><a href="#" style="color:#303ab2;font-weight: 600;">Mens</a>
                         <div class="Sub_menu_2">
                             <ul>
-                                <li><a href="#">Tops</a></li>
-                                <li><a href="#">Bottoms</a></li>
-                                <li><a href="#">Sportswear</a></li>
-                                <li><a href="#">Loungewear</a></li>
-                                <li><a href="#">innerwear</a></li>
-                                <li><a href="#">Indian Wear</a></li>
-                                <li><a href="#">Accessories</a></li>
-                                <li><a href="#">Footwear</a></li>
-                                <li><a href="#">Winterwear</a></li>
-                                <li><a href="#">Sports Leisure</a></li>
-                                <li><a href="#">The Shirt Shop</a></li>
-                                <li><a href="#">More</a></li>
+                                <li><a href="../Mens Section/mensTshirt.html">Tops</a></li>
+                                <li><a href="../Mens Section/mens_jeans.html">Bottoms</a></li>
+                                <li><a href="../Mens Section/men_active.html">Sportswear</a></li>
+                                <li><a href="../Mens Section/mens_casual.html">Loungewear</a></li>
+                                <li><a href="../Mens Section/men_innerwear.html">innerwear</a></li>
+                                <li><a href="../Mens Section/men_indian.html">Indian Wear</a></li>
+                                <li><a href="../Mens Section/men_accessories.html">Accessories</a></li>
+                                <li><a href="../Mens Section/men_footwear.html">Footwear</a></li>
+                                <li><a href="../Mens Section/men_winter.html">Winterwear</a></li>
+                                <li><a href="../Mens Section/men_active.html">Sports Leisure</a></li>
+                                <li><a href="../Mens Section/men_formal.html">The Shirt Shop</a></li>
+                                <li><a href="../Mens Section/men_trouser.html">More</a></li>
                             </ul>
                         </div>
                     </li>
