--- a/Mens Section/men_loungwear.html
+++ b/Mens Section/men_loungwear.html
@@ -13,11 +13,61 @@
 
     <link rel="stylesheet" href="../product_list.css">
     <link rel="stylesheet" href="../footer.css">
+    <link rel="stylesheet" href="../Sorting Navigation/sorting-style.css">
     
 
 </head>
 
 <body>
+
+  <p style="margin-left:100px">You searched for</p>
+  <div id="first">
+      <div  style="width:120px ; color:#929391; border:none ; margin-left:-20px"><p style="font-size:16px">Shop For</p></div>
+      <div><a href="../Sorting Navigation/women_nav_sort.html"><p>Women</p></a></div>
+      <div style="width:60px"><a href="../Sorting Navigation/men_nav_sort.html"><p>Men</p></a></div>
+      <div style="width:60px"><a href="../Sorting Navigation/Girl_nav_sort.html"><p>Girl</p></a></div>
+      <div style="width:60px"><a href="../Sorting Navigation/boy_nav_sort.html"><p>Boy</p></a></div>
+  </div>
+  <div id="input">
+    <div class="inner-box">
+      <select>
+        <option ><p >Price</p></option>
+    </select>
+    <select>
+        <option ><p >Browse</p></option>
+        <option value="">ONLINE ONLY (2472)</option>
+        <option value="">New (2072)</option>
+        <option value="">Get 2nd At flat 199 (1916)</option>
+        <option value="">Get 2nd At Flat 99 (916)</option>
+    </select>
+    <select>
+        <option ><p >Brand</p></option>
+        <option>Max (15120)</option>
+        <option>Peter England(24)</option>
+    </select>
+    <select>
+        <option ><p >Size</p></option>
+        <option value="">1</option>
+        <option value="">2</option>
+        <option value="">3</option>
+        <option value="">4</option>
+        <option value="">5</option>
+        <option value="">6</option>
+    </select>
+    <select>
+        <option><p >Color</p></option>
+    <option value="">Blue</option>
+    <option value="">Black</option>
+    <option value="">white</option>
+    <option value="">yellow</option>
+    </select>
+    </div>
+      
+  </div>
+
+
+
+
     <div class="sort">
         <div>
           <p class="total-product"></p>
