--- a/Girls Section/girls_tees.html
+++ b/Girls Section/girls_tees.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="../product_list.css">
     <link rel="stylesheet" href="../footer.css">
+    <link rel="stylesheet" href="../Sorting Navigation/sorting-style.css">
 
 </head>
 
@@ -62,8 +63,7 @@
     </div>
       
   </div>
-
-
+   <br><br>
 
 
 
