--- a/Girls Section/girls_essentials.html
+++ b/Girls Section/girls_essentials.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="../product_list.css">
     <link rel="stylesheet" href="../footer.css">
+    <link rel="stylesheet" href="../Sorting Navigation/sorting-style.css">
 
     
 
@@ -64,6 +65,7 @@
     </div>
       
   </div>
+  <br><br>
 
 
 
