added navbar in all pages

--- a/Girls Section/girls_dress.html
+++ b/Girls Section/girls_dress.html
@@ -14,13 +14,15 @@
     <link rel="stylesheet" href="../product_list.css">
     <link rel="stylesheet" href="../footer.css">
     <link rel="stylesheet" href="../Sorting Navigation/sorting-style.css">
-    
+    <link rel="stylesheet" href="../Navbar.css">
 
 </head>
 
 <body>
 
-  <p style="margin-left:100px">You searched for</p>
+  <div id="NAVBAR"></div>
+
+  <p style="margin-left:9%">You searched for</p>
   <div id="first">
       <div  style="width:120px ; color:#929391; border:none ; margin-left:-20px"><p style="font-size:16px">Shop For</p></div>
       <div><a href="../Sorting Navigation/women_nav_sort.html"><p>Women</p></a></div>
@@ -138,3 +140,5 @@ function NameSort() {
 </script>
 
 <script src="../footer.js"></script>
+
+<script src="../Navbar.js"></script>
