redirect to homepage

--- a/CheckOut.html
+++ b/CheckOut.html
@@ -18,6 +18,10 @@
             margin-right: 20px;
             padding-left: 20px;
             padding-right: 100px;
+
+        }
+        #shipping>div>div:hover{
+           border: 2px solid grey;
         }
         .card{
             display: flex;
@@ -93,7 +97,7 @@
         </div>
         <div>
             <h3>Add your shipping address</h3>
-            <form action="">
+            <form action="" id="address">
                 <label for="fullName">Full Name</label><br>
                 <input type="text" name="" id="fullName"><br>
                 <label for="mobile">Mobile Number</label><br>
@@ -117,7 +121,7 @@
         </div>
         <div>
             <h2>Select a payment Method</h2>
-            <form action="">
+            <form action="" id="cardDetails">
                 
                 <div class ="card">
                     <input type="radio" name="" id="">
