--- a/success.html
+++ b/success.html
@@ -50,6 +50,6 @@
     redirect.addEventListener("click", toHomePage);
 
     function toHomePage(){
-        window.location.href = "All Home Pages/index.html";
+        window.location.href = "./index.html";
     }
 </script>
