--- a/All Home Pages/Girls.html
+++ b/All Home Pages/Girls.html
@@ -61,7 +61,7 @@
             
             <div class="mid_li">
                 <ul>
-                    <li><a href="./index.html">Women</a>
+                    <li><a href="../index.html">Women</a>
                         <div class="Sub_menu_1" style="margin-left: -7.8%;">
                             <ul>
                                 <li><a href="../Womens Section/tees.html">Tops</a></li>
@@ -394,7 +394,7 @@
 
     <script src="../footer.js"></script>
 
-
+    <script src="../AllData.js"></script>
 
 
     <script>
@@ -422,7 +422,7 @@
         document.querySelector(".close").addEventListener("click",closefn)
 
         function closefn(){
-            window.location.href="index.html"
+            window.location.href="../index.html"
         }
     
     </script>
